<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_product_db_main_layout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mensaje_anadir_producto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/a_adir_producto_a_la_base_de_datos"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/anadir_nombre_producto"
        app:layout_constraintTop_toBottomOf="@+id/mensaje_anadir_producto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:hint="@string/nombre_del_producto"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_-"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/anadir_precio_producto"
        android:hint="@string/precio_del_producto"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/anadir_nombre_producto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="numberDecimal"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/anadir_categoria_producto"
        android:hint="@string/categoria_del_producto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anadir_precio_producto"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aceptar_anadir_producto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"
        android:text="@string/a_adir_producto_a_la_bd"
        />

</androidx.constraintlayout.widget.ConstraintLayout>